<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ajalalalhoseini.myapplication.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tcExp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:freezesText="true"
                android:padding="12dp"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:freezesText="true"
                android:padding="12dp"
                android:textSize="24sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4DB6AC"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#37474F"
            android:orientation="vertical">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:fontFamily="monospace"
                android:text="@string/_7"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:fontFamily="monospace"
                android:text="@string/_4"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/_1"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <ImageButton
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                app:srcCompat="@drawable/ic_space_bar_white_24dp"
                android:textColor="@android:color/background_light"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#37474F"
            android:orientation="vertical">

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:fontFamily="monospace"
                android:text="@string/_8"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:fontFamily="monospace"
                android:text="@string/_5"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/_2"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/_0"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#37474F"
            android:orientation="vertical">

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:fontFamily="monospace"
                android:text="@string/_9"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:fontFamily="monospace"
                android:text="@string/_6"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/_3"
                android:textColor="@color/primary_material_light_1"
                android:textSize="36sp" />

            <ImageButton
                android:id="@+id/buttonBackspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:longClickable="true"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                app:srcCompat="@drawable/ic_backspace_white_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#455A64"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonDivision"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/_Divide"
                android:textColor="@android:color/background_light"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/_Multiply"
                android:textColor="@android:color/background_light"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/_Minus"
                android:textColor="@android:color/background_light"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/_Plus"
                android:textColor="@android:color/background_light"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/_Equal"
                android:textColor="@android:color/background_light"
                android:textSize="36sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>